
### Version 1.0.0
Version 0.3.0 only included properties for KTG. This version expands the Standard to additionally
 allow transmission of data for UVGO and UVGZ.

- AHVSalaryMultipleType (Added)
- DailyAllowanceType (Added)
- DailyHospitalAllowanceType (Added)
- DeathCapitalType (Added)
- DisabilityCapitalType (Added)
- DSBPayrollFemaleType (Removed)
- DSBPayrollMaleType (Removed)
- FixedPayrollType (Removed)
- InsuranceDurationInYears (Changed)
    - Restricted values to enum
- InsuranceOptionsVariousUVGOType (Added)
- MaximumPayrollAmountType (Removed)
- NogaCodeType (Changed)
    - fixed capitalization of property names
    - all properties are now mandatory
- OfferCustomerType (Changed)
    - Added mandatory property "customerType": A customer can now be of type "private individual" or "company", affecting which fields are mandatory
    - Added mandatory property "typeOfActivity"
    - Added properties "surname", "firstname", "birthDate", "gender", "companyFoundingDate", "riskCharacteristic", "UVGRiskNo"
    - Renamed property "localityDomicil" to "domicilAddress"
    - Renamed property "isDomicilLocalityCorrespondenceAddress" to "isDomicilAddressCorrespondenceAddress"
    - Renamed property "localityCorrespondence" to "correspondenceAddress"
    - Fixed capitalization for properties "GAVcompliance" and "GAVname"
- OfferFixedPayrollsType (Changed)
    - Renamed to OfferDSBFixedPayrollsType
    - changed type of properties "fixedPayroll", "netPremiumDSBFixedPayrollMaleAmount", "netPremiumDSBFixedPayrollFemaleAmount",
        "netPremiumDSBMFixedPayrollAmount", "netPremiumDSBPFixedPayrollAmount" to "MonetaryAmountType"
- OfferNlpiDataType (Changed)
    - Added properties "UVGCompulsory", "UVGSupplement"
    - changed type of properties "netPremiumDSBTotal", "combinationDiscountAmount", "otherDiscountAmount",
                "surchargesTotal", "instalmentSurchargeAmount", "premiumMinimumAmount" in "premiumOverview" to "MonetaryAmountType"