@@ -10,7 +10,7 @@
 			"$ref": "AnnualCancellationType.json"
 		},
 		"typePayInstalment": {
-			"$ref": "DSBTypePayInstalmentType.json"
+			"$ref": "PayInstalmentType.json"
 		}
 
 	},
