@@ -16,7 +16,7 @@
 					"$ref": "AnnualCancellationType.json"
 				},
 				"typePayInstalment": {
-					"$ref": "DSBTypePayInstalmentType.json"
+					"$ref": "PayInstalmentType.json"
 				}
 			},
 			"additionalProperties": false,
